; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptools.c_snmp_int2asn_oid.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptools.c_snmp_int2asn_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asn_oid = type { i32 }

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"Integer value %s not supported\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, %struct.asn_oid*)* @snmp_int2asn_oid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @snmp_int2asn_oid(i8* %0, %struct.asn_oid* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.asn_oid*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store %struct.asn_oid* %1, %struct.asn_oid** %5, align 8
  %9 = load i64, i64* @errno, align 8
  store i64 %9, i64* %8, align 8
  store i64 0, i64* @errno, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 @strtol(i8* %10, i8** %6, i32 10)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* @errno, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @warn(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %15)
  %17 = load i64, i64* %8, align 8
  store i64 %17, i64* @errno, align 8
  store i8* null, i8** %3, align 8
  br label %28

18:                                               ; preds = %2
  %19 = load i64, i64* %8, align 8
  store i64 %19, i64* @errno, align 8
  %20 = load %struct.asn_oid*, %struct.asn_oid** %5, align 8
  %21 = load i64, i64* %7, align 8
  %22 = trunc i64 %21 to i32
  %23 = call i64 @snmp_suboid_append(%struct.asn_oid* %20, i32 %22)
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %18
  store i8* null, i8** %3, align 8
  br label %28

26:                                               ; preds = %18
  %27 = load i8*, i8** %6, align 8
  store i8* %27, i8** %3, align 8
  br label %28

28:                                               ; preds = %26, %25, %14
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}

declare dso_local i64 @strtol(i8*, i8**, i32) #1

declare dso_local i32 @warn(i8*, i8*) #1

declare dso_local i64 @snmp_suboid_append(%struct.asn_oid*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
